--- a/3B-WEB/assets/base/mobile.css
+++ b/3B-WEB/assets/base/mobile.css
@@ -830,6 +830,8 @@ table {border-collapse: collapse;border-spacing: 0;}
 .home-mobile .shopping-cart-page .coin3b {justify-content: space-between;padding: 0 9px 20px;margin-bottom: 20px;border-bottom: 5px solid #F2F2F2;}
 .home-mobile .shopping-cart-page .coin3b label {font-size: 15px;font-weight: 500;}
 .home-mobile .shopping-cart-page .coin3b label span {color: #BDBDBD;font-weight: normal;}
+.home-mobile .shopping-cart-page .select-address .item {border-bottom: none;}
+.home-mobile .shopping-cart-page .select-address .item .info {padding: 0;}
 
 .home-mobile .select-transport {margin: 46px 0 24px;}
 .home-mobile .select-transport .item {align-items: flex-start;padding: 20px 9px;border-bottom: 1px solid #F2F2F2;}
@@ -847,7 +849,8 @@ table {border-collapse: collapse;border-spacing: 0;}
 .policy-detail {font-size: 14px;}
 .policy-detail h4 {font-size: 15px;margin-bottom: 16px;}
 .policy-detail ul {margin-bottom: 12px;}
-.policy-detail ul li {line-height: 18px;margin-bottom: 4px;}
+.policy-detail ul li {line-height: 18px;margin-bottom: 4px;position: relative;padding-left: 24px;}
+.policy-detail ul li img {position: absolute;left: 0;}
 .policy-detail > p {margin-bottom: 20px;line-height: 18px;}
 .policy-detail > p span {font-weight: 500;}
 .policy-detail table {border: 1px solid #ED792A;border-radius: 4px;font-size: 13px;text-align: right;width: 100%;}
@@ -905,6 +908,43 @@ table {border-collapse: collapse;border-spacing: 0;}
 .home-mobile .select-voucher .coupon .form-group {margin-bottom: 0;margin-right: 10px;}
 .home-mobile .select-voucher .coupon .form-group label {margin-bottom: 8px;font-size: 14px;}
 .home-mobile .select-voucher .coupon .btn {padding: 14px 30px;border-radius: 4px;}
+
+.home-mobile .select-address {}
+.home-mobile .select-address .item {border-bottom: 5px solid #F2F2F2;}
+.home-mobile .select-address .item .info {padding: 16px 20px;border-bottom: 1px solid #F2F2F2;}
+.home-mobile .select-address .item .info h4 {font-size: 14px;position: relative;line-height: 30px;margin-bottom: 12px;}
+.home-mobile .select-address .item .info h4 span {display: block;position: absolute;top: 0;right: 0;font-size: 12px;line-height: 20px;font-weight: normal;padding: 5px 12px;border-radius: 12px 0px;}
+.home-mobile .select-address .item .info h4 span.blue {background: rgba(47, 128, 237, .1);color: #2F80ED;}
+.home-mobile .select-address .item .info h4 span.orange {background: rgba(242, 153, 74, .1);color: #F2994A;}
+.home-mobile .select-address .item .info ul {}
+.home-mobile .select-address .item .info ul li {font-size: 14px;line-height: 18px;margin-bottom: 4px;padding-left: 24px;position: relative;}
+.home-mobile .select-address .item .info ul li:last-child {margin-bottom: 0;}
+.home-mobile .select-address .item .info ul li img {position: absolute;left: 0;}
+.home-mobile .select-address .item .control {justify-content: space-between;padding: 16px 20px;}
+.home-mobile .select-address .item .control label {font-size: 15px;}
+
+.home-mobile .form-block {}
+.home-mobile .form-block .form-group {}
+.home-mobile .form-block .form-group label {font-size: 14px;color: #4F4F4F;margin-bottom: 8px;}
+.home-mobile .form-block .form-group .form-control {font-size: 14px;border-color: #E0E0E0;box-shadow: none;}
+.home-mobile .form-block .form-group .custom-slb select {border: 1px solid #E0E0E0;padding: 10px 16px;width: 100%;color: #4F4F4F;
+	-webkit-appearance: none;
+    -moz-appearance: none;
+    background-image: url(../images/new-design/icons-svg/caret.svg);
+    background-repeat: no-repeat;
+    background-position-x: 96%;
+    background-position-y: 50%;
+    background-size: 10px 10px;
+}
+.home-mobile .form-block .form-group textarea {resize: none;}
+.home-mobile .form-block .form-group.control {justify-content: space-between;}
+.home-mobile .form-block .form-group.control label {margin-bottom: 0;}
+
+.home-mobile .notices {padding: 30px;text-align: center;}
+.home-mobile .notices img {margin-bottom: 12px;}
+.home-mobile .notices h4 {font-size: 20px;line-height: 30px;}
+.home-mobile .notices p {font-size: 14px;color: #828282;}
+.home-mobile .notices .confirm {display: block;padding: 13px 30px;font-size: 16px;border-radius: 4px;}
 
 @media screen and (max-width: 640px) {
 	.home-mobile .header-content .featured ul li {width: 25%;}
@@ -1016,6 +1056,11 @@ table {border-collapse: collapse;border-spacing: 0;}
 	.home-mobile .outlet-page .filter-bl-2 .filter.size .list-size ul li {width: 50px;}
 
 	.home-mobile .select-voucher .voucher .info {width: 68%;}
+
+	.policy-detail table td, .policy-detail table th {padding: 8px 3px;}
+
+	.home-mobile .select-address .item .control,
+	.home-mobile .select-address .item .info {padding: 16px 9px;}
 }
 
 @media only screen and (max-device-width: 480px) { 
