--- a/3B-WEB/assets/base/mobile.css
+++ b/3B-WEB/assets/base/mobile.css
@@ -998,6 +998,14 @@ table {border-collapse: collapse;border-spacing: 0;}
 .login-page.sms .body .avatar {margin-bottom: 16px;}
 .login-page.sms .body .avatar img {width: 56px;height: 56px;border-radius: 50%;}
 
+.hot-today {}
+.hot-today .list-item {padding: 15px;box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);border-radius: 9px;}
+.hot-today .list-item .item {position: relative;margin-right: 12px;width: 110px;}
+.hot-today .list-item .item:last-child {margin-right: 0;}
+.hot-today .list-item .item .p-image {width: 110px;height: 110px;border-radius: 6px;}
+.hot-today .list-item .item .sale-label {position: absolute;top:0;left: 0;background: linear-gradient(102.14deg, #E33806 0%, #EC9229 91.73%);border-radius: 4px 0px 16px;color: #FFFFFF;width: auto;height: auto;font-size: 11px;padding: 4px 10px;}
+.hot-today .list-item .item .p-price {color: #FF2028;font-size: 12px;line-height: 24px;text-align: center;}
+
 @media screen and (max-width: 640px) {
 	.home-mobile .header-content .featured ul li {width: 25%;}
 }
