--- a/3B-WEB/assets/base/mobile.css
+++ b/3B-WEB/assets/base/mobile.css
@@ -659,7 +659,7 @@ table {border-collapse: collapse;border-spacing: 0;}
 #buyingroupModal .control {padding: 20px;justify-content: space-between;}
 #buyingroupModal .control .btn, #addsuccessModal .control .btn {padding: 12px 26px;border-radius: 6px;}
 #buyingroupModal .control .btn-addtocart, #addsuccessModal .control .btn-addtocart {color: #EC5229;border: 1px solid #EC5229;}
-.home-mobile .modal.custom-modal-success .modal-dialog-centered {display: -ms-flexbox;display: flex;-ms-flex-align: center;align-items: center;min-height: calc(100% - (.5rem * 2));}
+.home-mobile .modal.custom-modal-success .modal-dialog-centered {display: -ms-flexbox;display: flex;-ms-flex-align: center;align-items: center;min-height: calc(100% - (.5rem * 2));justify-content: center;}
 .home-mobile .modal.custom-modal-success .modal-content {padding: 30px;text-align: center;}
 .home-mobile .modal.custom-modal-success .modal-content h4 {font-size: 20px;font-weight: 500;margin-bottom: 24px;}
 .home-mobile .modal.custom-modal-success .modal-content p {font-size: 14px;margin-bottom: 32px;}
@@ -1067,6 +1067,14 @@ table {border-collapse: collapse;border-spacing: 0;}
 .hot-today .list-item .item .p-image {width: 110px;height: 110px;border-radius: 6px;}
 .hot-today .list-item .item .sale-label {position: absolute;top:0;left: 0;background: linear-gradient(102.14deg, #E33806 0%, #EC9229 91.73%);border-radius: 4px 0px 16px;color: #FFFFFF;width: auto;height: auto;font-size: 11px;padding: 4px 10px;}
 .hot-today .list-item .item .p-price {color: #FF2028;font-size: 12px;line-height: 24px;text-align: center;}
+
+.home-mobile .modal.custom-modal-alert .modal-dialog-centered {display: -ms-flexbox;display: flex;-ms-flex-align: center;align-items: center;min-height: calc(100% - (.5rem * 2));justify-content: center;}
+.home-mobile .modal.custom-modal-alert .modal-content {padding: 30px;text-align: center;}
+.home-mobile .modal.custom-modal-alert .modal-content h4 {font-size: 18px;font-weight: 400;margin-bottom: 24px;}
+.home-mobile .modal.custom-modal-alert .modal-content img {margin-bottom: 18px;}
+.home-mobile .modal.custom-modal-alert .modal-content .boxes {justify-content: space-between;}
+.home-mobile .modal.custom-modal-alert .modal-content .btn {padding: 12px 26px;border-radius: 6px;}
+.home-mobile .modal.custom-modal-alert .modal-content .btn-close {color: #EC5229;border: 1px solid #EC5229;}
 
 @media screen and (max-width: 640px) {
 	.home-mobile .header-content .featured ul li {width: 25%;}
